<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros2cli_snap</name>
  <version>0.0.0</version>
  <description>meta package for ros2cli snap dependencies</description>
  <maintainer email="canonical-robotics-brand@canonical.com">ubuntu-robotics</maintainer>
  <license>GPLv3</license>

  <exec_depend>ros-jazzy-ackermann-msgs</exec_depend>
  <exec_depend>ros-jazzy-action-msgs</exec_depend>
  <exec_depend>ros-jazzy-actionlib-msgs</exec_depend>
  <exec_depend>ros-jazzy-actuator-msgs</exec_depend>
  <exec_depend>ros-jazzy-apriltag-msgs</exec_depend>
  <exec_depend>ros-jazzy-aruco-msgs</exec_depend>
  <exec_depend>ros-jazzy-aruco-opencv-msgs</exec_depend>
  <exec_depend>ros-jazzy-automotive-autonomy-msgs</exec_depend>
  <exec_depend>ros-jazzy-automotive-navigation-msgs</exec_depend>
  <exec_depend>ros-jazzy-automotive-platform-msgs</exec_depend>
  <exec_depend>ros-jazzy-autoware-adapi-v1-msgs</exec_depend>
  <exec_depend>ros-jazzy-autoware-adapi-version-msgs</exec_depend>
  <exec_depend>ros-jazzy-autoware-auto-msgs</exec_depend>
  <exec_depend>ros-jazzy-autoware-common-msgs</exec_depend>
  <exec_depend>ros-jazzy-autoware-control-msgs</exec_depend>
  <exec_depend>ros-jazzy-autoware-internal-msgs</exec_depend>
  <exec_depend>ros-jazzy-autoware-localization-msgs</exec_depend>
  <exec_depend>ros-jazzy-autoware-map-msgs</exec_depend>
  <exec_depend>ros-jazzy-autoware-perception-msgs</exec_depend>
  <exec_depend>ros-jazzy-autoware-planning-msgs</exec_depend>
  <exec_depend>ros-jazzy-autoware-sensing-msgs</exec_depend>
  <exec_depend>ros-jazzy-autoware-system-msgs</exec_depend>
  <exec_depend>ros-jazzy-autoware-vehicle-msgs</exec_depend>
  <exec_depend>ros-jazzy-camera-aravis2-msgs</exec_depend>
  <exec_depend>ros-jazzy-can-msgs</exec_depend>
  <exec_depend>ros-jazzy-cartographer-ros-msgs</exec_depend>
  <exec_depend>ros-jazzy-cascade-lifecycle-msgs</exec_depend>
  <exec_depend>ros-jazzy-control-msgs</exec_depend>
  <exec_depend>ros-jazzy-controller-manager-msgs</exec_depend>
  <exec_depend>ros-jazzy-data-tamer-msgs</exec_depend>
  <exec_depend>ros-jazzy-delphi-esr-msgs</exec_depend>
  <exec_depend>ros-jazzy-delphi-mrr-msgs</exec_depend>
  <exec_depend>ros-jazzy-delphi-srr-msgs</exec_depend>
  <exec_depend>ros-jazzy-derived-object-msgs</exec_depend>
  <exec_depend>ros-jazzy-diagnostic-msgs</exec_depend>
  <exec_depend>ros-jazzy-dwb-msgs</exec_depend>
  <exec_depend>ros-jazzy-dynamixel-workbench-msgs</exec_depend>
  <exec_depend>ros-jazzy-etsi-its-cam-msgs</exec_depend>
  <exec_depend>ros-jazzy-etsi-its-cpm-ts-msgs</exec_depend>
  <exec_depend>ros-jazzy-etsi-its-denm-msgs</exec_depend>
  <exec_depend>ros-jazzy-etsi-its-msgs</exec_depend>
  <exec_depend>ros-jazzy-etsi-its-msgs-utils</exec_depend>
  <exec_depend>ros-jazzy-event-camera-msgs</exec_depend>
  <exec_depend>ros-jazzy-ffmpeg-image-transport-msgs</exec_depend>
  <exec_depend>ros-jazzy-flexbe-msgs</exec_depend>
  <exec_depend>ros-jazzy-flir-camera-msgs</exec_depend>
  <exec_depend>ros-jazzy-four-wheel-steering-msgs</exec_depend>
  <exec_depend>ros-jazzy-foxglove-msgs</exec_depend>
  <exec_depend>ros-jazzy-fuse-msgs</exec_depend>
  <exec_depend>ros-jazzy-gazebo-msgs</exec_depend>
  <exec_depend>ros-jazzy-geographic-msgs</exec_depend>
  <exec_depend>ros-jazzy-geometry-msgs</exec_depend>
  <exec_depend>ros-jazzy-gps-msgs</exec_depend>
  <exec_depend>ros-jazzy-graph-msgs</exec_depend>
  <exec_depend>ros-jazzy-grbl-msgs</exec_depend>
  <exec_depend>ros-jazzy-gz-msgs-vendor</exec_depend>
  <exec_depend>ros-jazzy-ibeo-msgs</exec_depend>
  <exec_depend>ros-jazzy-irobot-create-msgs</exec_depend>
  <exec_depend>ros-jazzy-kartech-linear-actuator-msgs</exec_depend>
  <exec_depend>ros-jazzy-leo-msgs</exec_depend>
  <exec_depend>ros-jazzy-lgsvl-msgs</exec_depend>
  <exec_depend>ros-jazzy-lifecycle-msgs</exec_depend>
  <exec_depend>ros-jazzy-map-msgs</exec_depend>
  <exec_depend>ros-jazzy-marine-acoustic-msgs</exec_depend>
  <exec_depend>ros-jazzy-marine-sensor-msgs</exec_depend>
  <exec_depend>ros-jazzy-marti-can-msgs</exec_depend>
  <exec_depend>ros-jazzy-marti-common-msgs</exec_depend>
  <exec_depend>ros-jazzy-marti-dbw-msgs</exec_depend>
  <exec_depend>ros-jazzy-marti-introspection-msgs</exec_depend>
  <exec_depend>ros-jazzy-marti-nav-msgs</exec_depend>
  <exec_depend>ros-jazzy-marti-perception-msgs</exec_depend>
  <exec_depend>ros-jazzy-marti-sensor-msgs</exec_depend>
  <exec_depend>ros-jazzy-marti-status-msgs</exec_depend>
  <exec_depend>ros-jazzy-marti-visualization-msgs</exec_depend>
  <exec_depend>ros-jazzy-mavros-msgs</exec_depend>
  <exec_depend>ros-jazzy-micro-ros-diagnostic-msgs</exec_depend>
  <exec_depend>ros-jazzy-micro-ros-msgs</exec_depend>
  <exec_depend>ros-jazzy-microstrain-inertial-msgs</exec_depend>
  <exec_depend>ros-jazzy-mobileye-560-660-msgs</exec_depend>
  <exec_depend>ros-jazzy-moveit-msgs</exec_depend>
  <exec_depend>ros-jazzy-mrpt-msgs</exec_depend>
  <exec_depend>ros-jazzy-mrpt-msgs-bridge</exec_depend>
  <exec_depend>ros-jazzy-nao-command-msgs</exec_depend>
  <exec_depend>ros-jazzy-nao-lola-command-msgs</exec_depend>
  <exec_depend>ros-jazzy-nao-lola-sensor-msgs</exec_depend>
  <exec_depend>ros-jazzy-nao-sensor-msgs</exec_depend>
  <exec_depend>ros-jazzy-nav-2d-msgs</exec_depend>
  <exec_depend>ros-jazzy-nav-msgs</exec_depend>
  <exec_depend>ros-jazzy-nav2-msgs</exec_depend>
  <exec_depend>ros-jazzy-neobotix-usboard-msgs</exec_depend>
  <exec_depend>ros-jazzy-nmea-msgs</exec_depend>
  <exec_depend>ros-jazzy-novatel-gps-msgs</exec_depend>
  <exec_depend>ros-jazzy-object-recognition-msgs</exec_depend>
  <exec_depend>ros-jazzy-octomap-msgs</exec_depend>
  <exec_depend>ros-jazzy-ouster-msgs</exec_depend>
  <exec_depend>ros-jazzy-ouster-sensor-msgs</exec_depend>
  <exec_depend>ros-jazzy-pal-statistics-msgs</exec_depend>
  <exec_depend>ros-jazzy-pcl-msgs</exec_depend>
  <exec_depend>ros-jazzy-pendulum-msgs</exec_depend>
  <exec_depend>ros-jazzy-phidgets-msgs</exec_depend>
  <exec_depend>ros-jazzy-plotjuggler-msgs</exec_depend>
  <exec_depend>ros-jazzy-point-cloud-msg-wrapper</exec_depend>
  <exec_depend>ros-jazzy-polygon-msgs</exec_depend>
  <exec_depend>ros-jazzy-radar-msgs</exec_depend>
  <exec_depend>ros-jazzy-rc-common-msgs</exec_depend>
  <exec_depend>ros-jazzy-rc-reason-msgs</exec_depend>
  <exec_depend>ros-jazzy-rclpy-message-converter-msgs</exec_depend>
  <exec_depend>ros-jazzy-rcss3d-agent-msgs</exec_depend>
  <exec_depend>ros-jazzy-rcss3d-agent-msgs-to-soccer-interfaces</exec_depend>
  <exec_depend>ros-jazzy-realsense2-camera-msgs</exec_depend>
  <exec_depend>ros-jazzy-rmf-api-msgs</exec_depend>
  <exec_depend>ros-jazzy-rmf-building-map-msgs</exec_depend>
  <exec_depend>ros-jazzy-rmf-charger-msgs</exec_depend>
  <exec_depend>ros-jazzy-rmf-dispenser-msgs</exec_depend>
  <exec_depend>ros-jazzy-rmf-door-msgs</exec_depend>
  <exec_depend>ros-jazzy-rmf-fleet-msgs</exec_depend>
  <exec_depend>ros-jazzy-rmf-ingestor-msgs</exec_depend>
  <exec_depend>ros-jazzy-rmf-lift-msgs</exec_depend>
  <exec_depend>ros-jazzy-rmf-obstacle-msgs</exec_depend>
  <exec_depend>ros-jazzy-rmf-scheduler-msgs</exec_depend>
  <exec_depend>ros-jazzy-rmf-site-map-msgs</exec_depend>
  <exec_depend>ros-jazzy-rmf-task-msgs</exec_depend>
  <exec_depend>ros-jazzy-rmf-traffic-msgs</exec_depend>
  <exec_depend>ros-jazzy-rmf-visualization-msgs</exec_depend>
  <exec_depend>ros-jazzy-rmf-workcell-msgs</exec_depend>
  <exec_depend>ros-jazzy-robot-calibration-msgs</exec_depend>
  <exec_depend>ros-jazzy-ros2-socketcan-msgs</exec_depend>
  <exec_depend>ros-jazzy-rosapi-msgs</exec_depend>
  <exec_depend>ros-jazzy-rosbag2-performance-benchmarking-msgs</exec_depend>
  <exec_depend>ros-jazzy-rosbag2-test-msgdefs</exec_depend>
  <exec_depend>ros-jazzy-rosbridge-msgs</exec_depend>
  <exec_depend>ros-jazzy-rosbridge-test-msgs</exec_depend>
  <exec_depend>ros-jazzy-rosgraph-msgs</exec_depend>
  <exec_depend>ros-jazzy-rqt-msg</exec_depend>
  <exec_depend>ros-jazzy-rtabmap-msgs</exec_depend>
  <exec_depend>ros-jazzy-rtcm-msgs</exec_depend>
  <exec_depend>ros-jazzy-rviz-2d-overlay-msgs</exec_depend>
  <exec_depend>ros-jazzy-sensor-msgs</exec_depend>
  <exec_depend>ros-jazzy-sensor-msgs-py</exec_depend>
  <exec_depend>ros-jazzy-service-msgs</exec_depend>
  <exec_depend>ros-jazzy-shape-msgs</exec_depend>
  <exec_depend>ros-jazzy-smach-msgs</exec_depend>
  <exec_depend>ros-jazzy-soccer-geometry-msgs</exec_depend>
  <exec_depend>ros-jazzy-soccer-model-msgs</exec_depend>
  <exec_depend>ros-jazzy-soccer-vision-2d-msgs</exec_depend>
  <exec_depend>ros-jazzy-soccer-vision-3d-msgs</exec_depend>
  <exec_depend>ros-jazzy-soccer-vision-attribute-msgs</exec_depend>
  <exec_depend>ros-jazzy-statistics-msgs</exec_depend>
  <exec_depend>ros-jazzy-std-msgs</exec_depend>
  <exec_depend>ros-jazzy-stereo-msgs</exec_depend>
  <exec_depend>ros-jazzy-system-modes-msgs</exec_depend>
  <exec_depend>ros-jazzy-teleop-tools-msgs</exec_depend>
  <exec_depend>ros-jazzy-test-msgs</exec_depend>
  <exec_depend>ros-jazzy-tf2-geometry-msgs</exec_depend>
  <exec_depend>ros-jazzy-tf2-msgs</exec_depend>
  <exec_depend>ros-jazzy-tf2-sensor-msgs</exec_depend>
  <exec_depend>ros-jazzy-trajectory-msgs</exec_depend>
  <exec_depend>ros-jazzy-turtlebot3-msgs</exec_depend>
  <exec_depend>ros-jazzy-twist-mux-msgs</exec_depend>
  <exec_depend>ros-jazzy-ublox-msgs</exec_depend>
  <exec_depend>ros-jazzy-ublox-ubx-msgs</exec_depend>
  <exec_depend>ros-jazzy-udp-msgs</exec_depend>
  <exec_depend>ros-jazzy-unique-identifier-msgs</exec_depend>
  <exec_depend>ros-jazzy-ur-dashboard-msgs</exec_depend>
  <exec_depend>ros-jazzy-ur-msgs</exec_depend>
  <exec_depend>ros-jazzy-urg-node-msgs</exec_depend>
  <exec_depend>ros-jazzy-velodyne-msgs</exec_depend>
  <exec_depend>ros-jazzy-vision-msgs</exec_depend>
  <exec_depend>ros-jazzy-vision-msgs-layers</exec_depend>
  <exec_depend>ros-jazzy-vision-msgs-rviz-plugins</exec_depend>
  <exec_depend>ros-jazzy-visualization-msgs</exec_depend>
  <exec_depend>ros-jazzy-webots-ros2-msgs</exec_depend>
  <exec_depend>ros-jazzy-wiimote-msgs</exec_depend>

</package>
