<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros2cli_msgs</name>
  <version>0.0.0</version>
  <description>meta package for ros2cli snap dependencies</description>
  <maintainer email="canonical-robotics-brand@canonical.com">ubuntu-robotics</maintainer>
  <license>GPLv3</license>

  <exec_depend>ackermann-msgs</exec_depend>
  <exec_depend>action-msgs</exec_depend>
  <exec_depend>actionlib-msgs</exec_depend>


</package>
