<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros2cli_msgs</name>
  <version>0.0.0</version>
  <description>meta package for ros2cli snap dependencies</description>
  <maintainer email="canonical-robotics-brand@canonical.com">ubuntu-robotics</maintainer>
  <license>GPLv3</license>
  <exec_depend>ackermann_msgs</exec_depend>
  <exec_depend>action_msgs</exec_depend>
  <exec_depend>actionlib_msgs</exec_depend>
  <exec_depend>actuator_msgs</exec_depend>
  <exec_depend>apriltag_msgs</exec_depend>
  <exec_depend>aruco_msgs</exec_depend>
  <exec_depend>aruco_opencv_msgs</exec_depend>
  <exec_depend>automotive_autonomy_msgs</exec_depend>
  <exec_depend>automotive_navigation_msgs</exec_depend>
  <exec_depend>automotive_platform_msgs</exec_depend>
  <exec_depend>autoware_adapi_v1_msgs</exec_depend>
  <exec_depend>autoware_adapi_version_msgs</exec_depend>
  <exec_depend>autoware_auto_msgs</exec_depend>
  <exec_depend>autoware_common_msgs</exec_depend>
  <exec_depend>autoware_control_msgs</exec_depend>
  <exec_depend>autoware_internal_msgs</exec_depend>
  <exec_depend>autoware_localization_msgs</exec_depend>
  <exec_depend>autoware_map_msgs</exec_depend>
  <exec_depend>autoware_perception_msgs</exec_depend>
  <exec_depend>autoware_planning_msgs</exec_depend>
  <exec_depend>autoware_sensing_msgs</exec_depend>
  <exec_depend>autoware_system_msgs</exec_depend>
  <exec_depend>autoware_vehicle_msgs</exec_depend>
  <exec_depend>camera_aravis2_msgs</exec_depend>
  <exec_depend>can_msgs</exec_depend>
  <exec_depend>cartographer_ros_msgs</exec_depend>
  <exec_depend>cascade_lifecycle_msgs</exec_depend>
  <exec_depend>control_msgs</exec_depend>
  <exec_depend>controller_manager_msgs</exec_depend>
  <exec_depend>data_tamer_msgs</exec_depend>
  <exec_depend>delphi_esr_msgs</exec_depend>
  <exec_depend>delphi_mrr_msgs</exec_depend>
  <exec_depend>delphi_srr_msgs</exec_depend>
  <exec_depend>derived_object_msgs</exec_depend>
  <exec_depend>diagnostic_msgs</exec_depend>
  <exec_depend>dwb_msgs</exec_depend>
  <exec_depend>dynamixel_workbench_msgs</exec_depend>
  <exec_depend>etsi_its_cam_msgs</exec_depend>
  <exec_depend>etsi_its_cpm_ts_msgs</exec_depend>
  <exec_depend>etsi_its_denm_msgs</exec_depend>
  <exec_depend>etsi_its_msgs</exec_depend>
  <exec_depend>etsi_its_msgs_utils</exec_depend>
  <exec_depend>event_camera_msgs</exec_depend>
  <exec_depend>ffmpeg_image_transport_msgs</exec_depend>
  <exec_depend>flexbe_msgs</exec_depend>
  <exec_depend>flir_camera_msgs</exec_depend>
  <exec_depend>four_wheel_steering_msgs</exec_depend>
  <exec_depend>foxglove_msgs</exec_depend>
  <exec_depend>fuse_msgs</exec_depend>
  <exec_depend>gazebo_msgs</exec_depend>
  <exec_depend>geographic_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>gps_msgs</exec_depend>
  <exec_depend>graph_msgs</exec_depend>
  <exec_depend>grbl_msgs</exec_depend>
  <exec_depend>gz_msgs_vendor</exec_depend>
  <exec_depend>ibeo_msgs</exec_depend>
  <exec_depend>irobot_create_msgs</exec_depend>
  <exec_depend>kartech_linear_actuator_msgs</exec_depend>
  <exec_depend>leo_msgs</exec_depend>
  <exec_depend>lgsvl_msgs</exec_depend>
  <exec_depend>lifecycle_msgs</exec_depend>
  <exec_depend>map_msgs</exec_depend>
  <exec_depend>marine_acoustic_msgs</exec_depend>
  <exec_depend>marine_sensor_msgs</exec_depend>
  <exec_depend>marti_can_msgs</exec_depend>
  <exec_depend>marti_common_msgs</exec_depend>
  <exec_depend>marti_dbw_msgs</exec_depend>
  <exec_depend>marti_introspection_msgs</exec_depend>
  <exec_depend>marti_nav_msgs</exec_depend>
  <exec_depend>marti_perception_msgs</exec_depend>
  <exec_depend>marti_sensor_msgs</exec_depend>
  <exec_depend>marti_status_msgs</exec_depend>
  <exec_depend>marti_visualization_msgs</exec_depend>
  <exec_depend>mavros_msgs</exec_depend>
  <exec_depend>micro_ros_diagnostic_msgs</exec_depend>
  <exec_depend>micro_ros_msgs</exec_depend>
  <exec_depend>microstrain_inertial_msgs</exec_depend>
  <exec_depend>mobileye_560_660_msgs</exec_depend>
  <exec_depend>moveit_msgs</exec_depend>
  <exec_depend>mrpt_msgs</exec_depend>
  <exec_depend>nao_command_msgs</exec_depend>
  <exec_depend>nao_lola_command_msgs</exec_depend>
  <exec_depend>nao_lola_sensor_msgs</exec_depend>
  <exec_depend>nao_sensor_msgs</exec_depend>
  <exec_depend>nav_2d_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>nav2_msgs</exec_depend>
  <exec_depend>neobotix_usboard_msgs</exec_depend>
  <exec_depend>nmea_msgs</exec_depend>
  <exec_depend>novatel_gps_msgs</exec_depend>
  <exec_depend>object_recognition_msgs</exec_depend>
  <exec_depend>octomap_msgs</exec_depend>
  <exec_depend>ouster_sensor_msgs</exec_depend>
  <exec_depend>pal_statistics_msgs</exec_depend>
  <exec_depend>pcl_msgs</exec_depend>
  <exec_depend>pendulum_msgs</exec_depend>
  <exec_depend>phidgets_msgs</exec_depend>
  <exec_depend>plotjuggler_msgs</exec_depend>
  <exec_depend>polygon_msgs</exec_depend>
  <exec_depend>radar_msgs</exec_depend>
  <exec_depend>rc_common_msgs</exec_depend>
  <exec_depend>rc_reason_msgs</exec_depend>
  <exec_depend>rclpy_message_converter_msgs</exec_depend>
  <exec_depend>rcss3d_agent_msgs</exec_depend>
  <exec_depend>rcss3d_agent_msgs_to_soccer_interfaces</exec_depend>
  <exec_depend>realsense2_camera_msgs</exec_depend>
  <exec_depend>rmf_api_msgs</exec_depend>
  <exec_depend>rmf_building_map_msgs</exec_depend>
  <exec_depend>rmf_charger_msgs</exec_depend>
  <exec_depend>rmf_dispenser_msgs</exec_depend>
  <exec_depend>rmf_door_msgs</exec_depend>
  <exec_depend>rmf_fleet_msgs</exec_depend>
  <exec_depend>rmf_ingestor_msgs</exec_depend>
  <exec_depend>rmf_lift_msgs</exec_depend>
  <exec_depend>rmf_obstacle_msgs</exec_depend>
  <exec_depend>rmf_scheduler_msgs</exec_depend>
  <exec_depend>rmf_site_map_msgs</exec_depend>
  <exec_depend>rmf_task_msgs</exec_depend>
  <exec_depend>rmf_traffic_msgs</exec_depend>
  <exec_depend>rmf_visualization_msgs</exec_depend>
  <exec_depend>rmf_workcell_msgs</exec_depend>
  <exec_depend>robot_calibration_msgs</exec_depend>
  <exec_depend>ros2_socketcan_msgs</exec_depend>
  <exec_depend>rosapi_msgs</exec_depend>
  <exec_depend>rosbag2_performance_benchmarking_msgs</exec_depend>
  <!-- exec_depend>rosbag2_test_msgdefs</ -->
  <exec_depend>rosbridge_msgs</exec_depend>
  <!-- exec_depend>rosbridge_test_msgs</ -->
  <exec_depend>rosgraph_msgs</exec_depend>
  <!-- <exec_depend>rqt_msg</exec_depend> -->
  <exec_depend>rtabmap_msgs</exec_depend>
  <exec_depend>rtcm_msgs</exec_depend>
  <exec_depend>rviz_2d_overlay_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>sensor_msgs_py</exec_depend>
  <exec_depend>service_msgs</exec_depend>
  <exec_depend>shape_msgs</exec_depend>
  <exec_depend>smach_msgs</exec_depend>
  <exec_depend>soccer_geometry_msgs</exec_depend>
  <exec_depend>soccer_model_msgs</exec_depend>
  <exec_depend>soccer_vision_2d_msgs</exec_depend>
  <exec_depend>soccer_vision_3d_msgs</exec_depend>
  <exec_depend>soccer_vision_attribute_msgs</exec_depend>
  <exec_depend>statistics_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>stereo_msgs</exec_depend>
  <exec_depend>system_modes_msgs</exec_depend>
  <exec_depend>teleop_tools_msgs</exec_depend>
  <!-- exec_depend>test_msgs</ -->
  <exec_depend>tf2_geometry_msgs</exec_depend>
  <exec_depend>tf2_msgs</exec_depend>
  <exec_depend>tf2_sensor_msgs</exec_depend>
  <exec_depend>trajectory_msgs</exec_depend>
  <exec_depend>turtlebot3_msgs</exec_depend>
  <exec_depend>twist_mux_msgs</exec_depend>
  <exec_depend>ublox_msgs</exec_depend>
  <exec_depend>ublox_ubx_msgs</exec_depend>
  <exec_depend>udp_msgs</exec_depend>
  <exec_depend>unique_identifier_msgs</exec_depend>
  <exec_depend>ur_dashboard_msgs</exec_depend>
  <exec_depend>ur_msgs</exec_depend>
  <exec_depend>urg_node_msgs</exec_depend>
  <exec_depend>velodyne_msgs</exec_depend>
  <exec_depend>vision_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>webots_ros2_msgs</exec_depend>
  <exec_depend>wiimote_msgs</exec_depend>
</package>
